# shoc

./: CMakeLists.txt  README.md  main.cpp  sha.h  test.cpp
inc/: aes.h  aes_cbc.h  aes_cbc_mac.h  aes_ccm.h  aes_cfb.h  aes_ctr.h  aes_ecb.h  aes_ofb.h  hkdf.h  hmac.h  hotp.h  md2.h  md4.h  md5.h  sha.h  sha1.h  sha2.h  sha3.h
inc/shoc/: _log.h  _util.h  aes.h  aes_cbc.h  aes_cbc_mac.h  aes_ccm.h  aes_cfb.h  aes_ctr.h  aes_ecb.h  aes_gcm.h  aes_ofb.h  gimli.h  hkdf.h  hmac.h  hotp.h  log.h  md2.h  md4.h  md5.h  sha1.h  sha2.h  sha3.h  util.h  xoodoo.h  xoodyak.h
inc/shoc/_experimental/: bigint.h  crc.h  elliptic.h  finite_field.h  md5.h  secp256k1.h  sha3.h  xoodyak.h
inc/shoc/cipher/: aes.h  chacha.h
inc/shoc/ecc/: crc.h
inc/shoc/hash/: gimli.h  md2.h  md4.h  md5.h  sha1.h  sha2.h  sha3.h
inc/shoc/kdf/: hkdf.h
inc/shoc/mac/: cbc_mac.h  gmac.h  hmac.h
inc/shoc/mode/: cbc.h  ccm.h  cfb.h  ctr.h  ecb.h  gcm.h  ofb.h
inc/shoc/modes/: cbc.h  cbc_mac.h  ccm.h  cfb.h  ctr.h  ecb.h  gcm.h  ofb.h
inc/shoc/otp/: hotp.h
inc/utl/: bit_window.h  float.h  makima.h  math.h  physics.h  pool.h  ring.h  storage.h  time.h  vector.h
lib/utl/: CMakeLists.txt  README.md  main.cpp
lib/utl/inc/utl/: base.h  bit.h  bit_vector.h  list.h  log.h  storage.h  str.h  svector.h  time.h
lib/utl/test/: _util.h  bit.cpp  bit_vector.cpp  math.cpp  pool.cpp  ring.cpp  str.cpp
src/: md2.cpp  md4.cpp  sha1.cpp
test/: base.cpp  bit.cpp  bit_window.cpp  elliptic.cpp  math.cpp  physics.cpp  str.cpp  test.h  test_aes.cpp  test_hash.cpp  test_hkdf.cpp  test_hmac.cpp  test_hotp.cpp  test_mode.cpp  test_modes.cpp  util.cpp  vector.cpp
test/cipher/: aes.cpp  chacha.cpp
test/ecc/: crc.cpp
test/hash/: hash.cpp
test/kdf/: hkdf.cpp
test/mac/: hmac.cpp
test/mode/: mode.cpp
test/otp/: hotp.cpp
